samples/_failures_safe/1761127882_ee5e13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07fabb2a.c: In function ‘read_string’:
./samples/SAFE/__tmp_07fabb2a.c:164:20: error: expected ‘;’ at end of input
  164 |             advance
      |                    ^
      |                    ;
./samples/SAFE/__tmp_07fabb2a.c:164:13: error: expected declaration or statement at end of input
  164 |             advance
      |             ^~~~~~~
./samples/SAFE/__tmp_07fabb2a.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_07fabb2a.c:164:13: error: expected declaration or statement at end of input
